<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contador_de_productos"
        android:layout_gravity="center"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3">

        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_1"
            android:id="@+id/contador1"
            android:background="@color/colorAccent"
            android:layout_column="0"
            android:layout_row="0"/>
        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_2"
            android:id="@+id/contador2"
            android:background="@color/blue"
            android:layout_column="1"
            android:layout_row="0"/>
        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_3"
            android:id="@+id/contador3"
            android:background="@color/colorPrimary"
            android:layout_column="2"
            android:layout_row="0"/>
        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_4"
            android:id="@+id/contador4"
            android:background="@color/colorPrimaryDark"
            android:layout_column="0"
            android:layout_row="1"/>
        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_5"
            android:id="@+id/contador5"
            android:background="@color/darkYellow"
            android:layout_column="1"
            android:layout_row="1"/>
        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_6"
            android:id="@+id/contador6"
            android:background="@color/green"
            android:layout_column="2"
            android:layout_row="1"/>
        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_7"
            android:id="@+id/contador7"
            android:background="@color/orange"
            android:layout_column="0"
            android:layout_row="2"/>
        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_8"
            android:id="@+id/contador8"
            android:background="@color/pink"
            android:layout_column="1"
            android:layout_row="2"
            />
        <TextView android:layout_width="320px"
            android:layout_height="320px"
            android:text="@string/contador_9"
            android:id="@+id/contador9"
            android:background="@color/yellow"
            android:layout_column="2"
            android:layout_row="2"/>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ecribe_el_usuario_aqui"
        android:id="@+id/et_usuario"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Correo Electronico"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_el_correo_aqui"
        android:id="@+id/et_correo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enviar"
        android:id="@+id/button_send"/>


</LinearLayout>
